2014-12-31  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Hide tweets matched with one of filter
	patterns. Filter patterns can be defined with the new variable
	`twittering-filter-alist'.
	(twittering-filter-alist): new variable for specifying filters.
	(twittering-generate-composite-timeline): exclude tweets matched
	with one of filter patterns.
	(twittering-get-filter-list-for-timeline-spec-string): new
	function that returns filter pattern list for the given timeline.
	(twittering-get-filter-list-for-timeline-spec): likewise.
	(twittering-match-pattern): new function that returns non-nil if
	the given tweet matches with the given pattern.
	(twittering-match-pattern-list): new function that returns non-nil
	if the given tweet matches with one of the given patterns.
	(twittering-current-timeline-data): exclude tweets matched with
	one of filter patterns.

	* twittering-mode.el: Add new commands `twittering-mute' and
	`twittering-unmute'.
	(twittering-call-api-with-account): add new APIs mute/unmute to
	the docstring.
	(twittering-call-api-with-account-in-api1.1): implement new APIs
	mute/unmute.
	(twittering-mute): new command.
	(twittering-unmute): new command.

	* twittering-mode.el: Add the CA certificates issued by Equifax as
	embedded CA certificates. The added certificates are used for a
	HTTPS connection for Google URL Shortener, `goo.gl'.
	(twittering-ca-cert-list): update CA certificates.
	* update-cert.sh: Retrieve CA certificates issued by Equifax in
	addition to those issued by Verisign.

	* twittering-mode.el: Update embedded CA certificates.
	(twittering-ca-cert-list): update CA certificates.

	* twittering-mode.el: The timeline spec string "@" is equivalent
	to ":mentions" instead of ":replies". "@" has been interpreted as
	a shorten string of ":mentions", but
	`twittering-timeline-spec-to-string' returned ":mentions" as the
	shorten version of ":mentions".
	(twittering-timeline-spec-to-string): interpret the timeline spec