@@ -7341,7 +7341,15 @@ to JSON objects from ordinary timeline and search timeline."
 	 (entities (cdr (assq 'entities json-object)))
 	 (urls (cdr (assq 'urls entities)))
 	 (hashtags (cdr (assq 'hashtags entities)))
-	 (mentions (cdr (assq 'user_mentions entities))))
+	 (mentions (cdr (assq 'user_mentions entities)))
+	 (media (cdr (assq 'media entities)))
+	 (func
+	  (lambda (entry sym-table)
+	    (mapcar (lambda (sym-entry)
+		      (let ((sym (car sym-entry))
+			    (target (cdr sym-entry)))
+			`(,sym . ,(cdr (assq target entry)))))
+		    sym-table))))
     `((text . ,(twittering-normalize-string text))
       (created-at
        . ,(apply 'encode-time
@@ -7386,7 +7394,21 @@ to JSON objects from ordinary timeline and search timeline."
 			       . ,(cdr (assq 'display_url entry)))
 			      (expanded-url
 			       . ,(cdr (assq 'expanded_url entry))))))
-			urls)))
+			urls))
+       (media . ,(mapcar (lambda (entry)
+			  (let* ((indices (cdr (assq 'indices entry)))
+				 (start (elt indices 0))
+				 (end (elt indices 1))
+				 (gap (twittering-get-gap start gap-list)))
+			    `((start . ,(- start gap))
+			      (end . ,(- end gap))
+			      (url . ,(cdr (assq 'url entry)))
+			      (raw-entry . ,entry)
+			      ,@(funcall func entry
+					 '((media-url . media_url)
+					   (display-url . display_url)
+					   (expanded-url . expanded_url))))))
+			 media)))
       (retweet-count . ,(cdr (assq 'retweet_count json-object)))
       (favorite-count . ,(cdr (assq 'favorite_count json-object)))
       )))
